--- a/index.html
+++ b/index.html
@@ -14,7 +14,285 @@
       <div class="container"></div>
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+      <section class="popular-equipment">
+        <div class="popular-equipment__container">
+          <h2 class="popular-equipment__title">
+            Оборудование, которое чаще всего выбирают наши клиенты
+          </h2>
+
+          <div class="popular-equipment__cards">
+            <div class="popular-equipment__card">
+              <div class="popular-equipment__card-title">T-PLUS Wintecare</div>
+              <div class="popular-equipment__card-text">Аппарат для текар-терапии</div>
+              <figure class="popular-equipment__card-figure">
+                <img
+                  class="popular-equipment__card-figure-image"
+                  src="./assets/popular-equipment-1.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="popular-equipment__card-more">
+                <a class="popular-equipment__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="popular-equipment__card">
+              <div class="popular-equipment__card-title">M6</div>
+              <div class="popular-equipment__card-text">Роботизированный лазер для MLS-терапии</div>
+              <figure class="popular-equipment__card-figure">
+                <img
+                  class="popular-equipment__card-figure-image"
+                  src="./assets/popular-equipment-2.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="popular-equipment__card-more">
+                <a class="popular-equipment__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="popular-equipment__card">
+              <div class="popular-equipment__card-title">Duolith SD1 T-Top</div>
+              <div class="popular-equipment__card-text">Аппарат ударно-волновой терапии</div>
+              <figure class="popular-equipment__card-figure">
+                <img
+                  class="popular-equipment__card-figure-image"
+                  src="./assets/popular-equipment-3.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="popular-equipment__card-more">
+                <a class="popular-equipment__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="popular-equipment__card">
+              <div class="popular-equipment__card-title">MASTERPULS MP200</div>
+              <div class="popular-equipment__card-text">Аппарат ударно-волновой терапии</div>
+              <figure class="popular-equipment__card-figure">
+                <img
+                  class="popular-equipment__card-figure-image"
+                  src="./assets/popular-equipment-4.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="popular-equipment__card-more">
+                <a class="popular-equipment__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="popular-equipment__card">
+              <div class="popular-equipment__card-title">Salus Talent A</div>
+              <div class="popular-equipment__card-text">
+                Аппарат для высокоинтенсивной магнитотерапии
+              </div>
+              <figure class="popular-equipment__card-figure">
+                <img
+                  class="popular-equipment__card-figure-image"
+                  src="./assets/popular-equipment-5.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="popular-equipment__card-more">
+                <a class="popular-equipment__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="popular-equipment__card">
+              <div class="popular-equipment__card-title">Salus Talent Pro</div>
+              <div class="popular-equipment__card-text">
+                Аппарат для высокоинтенсивной магнитотерапии
+              </div>
+              <figure class="popular-equipment__card-figure">
+                <img
+                  class="popular-equipment__card-figure-image"
+                  src="./assets/popular-equipment-6.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="popular-equipment__card-more">
+                <a class="popular-equipment__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="popular-equipment__card">
+              <div class="popular-equipment__card-title">Оxyttera</div>
+              <div class="popular-equipment__card-text">
+                Аппарат для интервальной гипо-гипероксической тренировки
+              </div>
+              <figure class="popular-equipment__card-figure">
+                <img
+                  class="popular-equipment__card-figure-image"
+                  src="./assets/popular-equipment-7.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="popular-equipment__card-more">
+                <a class="popular-equipment__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="popular-equipment__card">
+              <div class="popular-equipment__card-title">Accuniq BC720</div>
+              <div class="popular-equipment__card-text">Анализатор состава тела</div>
+              <figure class="popular-equipment__card-figure">
+                <img
+                  class="popular-equipment__card-figure-image"
+                  src="./assets/popular-equipment-8.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="popular-equipment__card-more">
+                <a class="popular-equipment__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="popular-equipment__card">
+              <div class="popular-equipment__card-title">Dermaxel</div>
+              <div class="popular-equipment__card-text">
+                Многофункциональный фракционный СО лазер
+              </div>
+              <figure class="popular-equipment__card-figure">
+                <img
+                  class="popular-equipment__card-figure-image"
+                  src="./assets/popular-equipment-9.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="popular-equipment__card-more">
+                <a class="popular-equipment__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="full-range">
+        <div class="full-range__container">
+          <h2 class="full-range__title">Полный спектр услуг</h2>
+
+          <div class="full-range__cards">
+            <div class="full-range__card">
+              <div class="full-range__card-title">Финансовый консалтинг от экспертов</div>
+              <figure class="full-range__card-figure">
+                <img
+                  class="full-range__card-figure-image"
+                  src="./assets/full-range-1.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="full-range__card-more">
+                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="full-range__card">
+              <div class="full-range__card-title">Персональный лизинг</div>
+              <figure class="full-range__card-figure">
+                <img
+                  class="full-range__card-figure-image"
+                  src="./assets/full-range-2.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="full-range__card-more">
+                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="full-range__card">
+              <div class="full-range__card-title">Профессиональный сервис и ремонт</div>
+              <figure class="full-range__card-figure">
+                <img
+                  class="full-range__card-figure-image"
+                  src="./assets/full-range-3.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="full-range__card-more">
+                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="full-range__card">
+              <div class="full-range__card-title">Постгарантийная поддержка</div>
+              <figure class="full-range__card-figure">
+                <img
+                  class="full-range__card-figure-image"
+                  src="./assets/full-range-4.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="full-range__card-more">
+                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="full-range__card">
+              <div class="full-range__card-title">Обучение</div>
+              <figure class="full-range__card-figure">
+                <img
+                  class="full-range__card-figure-image"
+                  src="./assets/full-range-5.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="full-range__card-more">
+                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="full-range__card">
+              <div class="full-range__card-title">Апробация оборудования</div>
+              <figure class="full-range__card-figure">
+                <img
+                  class="full-range__card-figure-image"
+                  src="./assets/full-range-6.jpg"
+                  alt="equipment"
+                />
+              </figure>
+              <div class="full-range__card-more">
+                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              </div>
+            </div>
+
+            <div class="full-range__consult">
+              <button class="full-range__consult-button">
+                <span class="full-range__consult-button-text">Получить консультацию</span>
+                <span class="full-range__consult-button-disclaimer">
+                  Оставьте заявку и получите бесплатную консультацию
+                </span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="demonstration">
+        <div class="demonstration__container">
+          <div class="demonstration__info">
+            <div class="demonstration__info-title">
+              Онлайн показ и выездная демонстрация оборудования
+            </div>
+            <div class="demonstration__info-description">
+              Выездная демонстрация оборудования в вашей клинике или онлайн
+            </div>
+            <div class="demonstration__info-signup">
+              <div class="demonstration__info-signup-button">Записаться на демонстрацию</div>
+            </div>
+          </div>
+
+          <figure class="demonstration__figure">
+            <img
+              class="demonstration__figure-image"
+              src="./assets/demonstration-photo.png"
+              alt="demonstration"
+            />
+          </figure>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer">
       <div class="container"></div>
