feat: added full-range

--- a/index.html
+++ b/index.html
@@ -170,100 +170,102 @@
 
       <section class="full-range">
         <div class="full-range__container">
-          <h2 class="full-range__title">Полный спектр услуг</h2>
+          <div class="full-range__wrapper">
+            <h2 class="full-range__title">Полный спектр услуг</h2>
 
-          <div class="full-range__cards">
-            <div class="full-range__card">
-              <div class="full-range__card-title">Финансовый консалтинг от экспертов</div>
-              <figure class="full-range__card-figure">
-                <img
-                  class="full-range__card-figure-image"
-                  src="./assets/full-range-1.jpg"
-                  alt="equipment"
-                />
-              </figure>
-              <div class="full-range__card-more">
-                <a class="full-range__card-more-link" href="#">Подробнее</a>
+            <div class="full-range__cards">
+              <div class="full-range__card">
+                <div class="full-range__card-title">Финансовый консалтинг от экспертов</div>
+                <figure class="full-range__card-figure">
+                  <img
+                    class="full-range__card-figure-image"
+                    src="./assets/full-range-1.jpg"
+                    alt="equipment"
+                  />
+                </figure>
+                <div class="full-range__card-more">
+                  <a class="full-range__card-more-link" href="#">Подробнее</a>
+                </div>
               </div>
-            </div>
 
-            <div class="full-range__card">
-              <div class="full-range__card-title">Персональный лизинг</div>
-              <figure class="full-range__card-figure">
-                <img
-                  class="full-range__card-figure-image"
-                  src="./assets/full-range-2.jpg"
-                  alt="equipment"
-                />
-              </figure>
-              <div class="full-range__card-more">
-                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              <div class="full-range__card">
+                <div class="full-range__card-title">Персональный лизинг</div>
+                <figure class="full-range__card-figure">
+                  <img
+                    class="full-range__card-figure-image"
+                    src="./assets/full-range-2.jpg"
+                    alt="equipment"
+                  />
+                </figure>
+                <div class="full-range__card-more">
+                  <a class="full-range__card-more-link" href="#">Подробнее</a>
+                </div>
               </div>
-            </div>
 
-            <div class="full-range__card">
-              <div class="full-range__card-title">Профессиональный сервис и ремонт</div>
-              <figure class="full-range__card-figure">
-                <img
-                  class="full-range__card-figure-image"
-                  src="./assets/full-range-3.jpg"
-                  alt="equipment"
-                />
-              </figure>
-              <div class="full-range__card-more">
-                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              <div class="full-range__card">
+                <div class="full-range__card-title">Профессиональный сервис и ремонт</div>
+                <figure class="full-range__card-figure">
+                  <img
+                    class="full-range__card-figure-image"
+                    src="./assets/full-range-3.jpg"
+                    alt="equipment"
+                  />
+                </figure>
+                <div class="full-range__card-more">
+                  <a class="full-range__card-more-link" href="#">Подробнее</a>
+                </div>
               </div>
-            </div>
 
-            <div class="full-range__card">
-              <div class="full-range__card-title">Постгарантийная поддержка</div>
-              <figure class="full-range__card-figure">
-                <img
-                  class="full-range__card-figure-image"
-                  src="./assets/full-range-4.jpg"
-                  alt="equipment"
-                />
-              </figure>
-              <div class="full-range__card-more">
-                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              <div class="full-range__card">
+                <div class="full-range__card-title">Постгарантийная поддержка</div>
+                <figure class="full-range__card-figure">
+                  <img
+                    class="full-range__card-figure-image"
+                    src="./assets/full-range-4.jpg"
+                    alt="equipment"
+                  />
+                </figure>
+                <div class="full-range__card-more">
+                  <a class="full-range__card-more-link" href="#">Подробнее</a>
+                </div>
               </div>
-            </div>
 
-            <div class="full-range__card">
-              <div class="full-range__card-title">Обучение</div>
-              <figure class="full-range__card-figure">
-                <img
-                  class="full-range__card-figure-image"
-                  src="./assets/full-range-5.jpg"
-                  alt="equipment"
-                />
-              </figure>
-              <div class="full-range__card-more">
-                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              <div class="full-range__card">
+                <div class="full-range__card-title">Обучение</div>
+                <figure class="full-range__card-figure">
+                  <img
+                    class="full-range__card-figure-image"
+                    src="./assets/full-range-5.jpg"
+                    alt="equipment"
+                  />
+                </figure>
+                <div class="full-range__card-more">
+                  <a class="full-range__card-more-link" href="#">Подробнее</a>
+                </div>
               </div>
-            </div>
 
-            <div class="full-range__card">
-              <div class="full-range__card-title">Апробация оборудования</div>
-              <figure class="full-range__card-figure">
-                <img
-                  class="full-range__card-figure-image"
-                  src="./assets/full-range-6.jpg"
-                  alt="equipment"
-                />
-              </figure>
-              <div class="full-range__card-more">
-                <a class="full-range__card-more-link" href="#">Подробнее</a>
+              <div class="full-range__card">
+                <div class="full-range__card-title">Апробация оборудования</div>
+                <figure class="full-range__card-figure">
+                  <img
+                    class="full-range__card-figure-image"
+                    src="./assets/full-range-6.jpg"
+                    alt="equipment"
+                  />
+                </figure>
+                <div class="full-range__card-more">
+                  <a class="full-range__card-more-link" href="#">Подробнее</a>
+                </div>
               </div>
-            </div>
 
-            <div class="full-range__consult">
-              <button class="full-range__consult-button">
-                <span class="full-range__consult-button-text">Получить консультацию</span>
-                <span class="full-range__consult-button-disclaimer">
-                  Оставьте заявку и получите бесплатную консультацию
-                </span>
-              </button>
+              <div class="full-range__consult">
+                <button class="full-range__consult-button">
+                  <span class="full-range__consult-button-text">Получить консультацию</span>
+                  <span class="full-range__consult-button-disclaimer">
+                    Оставьте заявку и получите бесплатную консультацию
+                  </span>
+                </button>
+              </div>
             </div>
           </div>
         </div>
